# slang-voxels

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  settings.yaml
.cargo/: config.toml
.github/workflows/: pages.yml
decks/: movement.ron
shaders/: binding.slang  common.slang  player_update.slang  render.slang  user.slang  voxel_update.slang  worldgen.slang
src/: card_editor.rs  card_system.rs  egui_tools.rs  gui.rs  lobby_browser.rs  main.rs  settings_manager.rs  shared.rs  utils.rs
